Replaced .css in javascript file
I replaced .css with .addClass and .removeClass in my javascript file so
that there no longer was any css embedded in my javascript. Now the
program adds and removes classes in order to change the input border
color, alerting user of empty input fields.

--- a/css/main.css
+++ b/css/main.css
@@ -25,12 +25,22 @@ header h1 {
 	font-size: 1.5em;
 }
 
+/* Input form */
+
 form {
 	margin-bottom: 15px;
 }
 
 input {
 	padding-left: 10px;
+}
+
+.border-default {
+	border: 2px inset;
+}
+
+.border-alert {
+	border: solid 2px #CC0000;
 }
 
 /* MAIN */
